--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,10 +1,27 @@
 .navbar {
-  height: 10vh;
-  display: flex;
-  justify-content: space-between;
+    height: 10vh;
+    display: flex;
+    justify-content: space-between;
 }
 
 .navbar_elements {
-  width: auto;
-  height: 7vh;
+    width: auto;
+    height: 7vh;
+}
+
+.product_name {
+    font-size: 2rem;
+}
+
+.product_image {
+    width: 10vw;
+    height: auto;
+}
+
+.product_description {
+    font-size: 1rem;
+}
+
+.product_price {
+    font-size: 1rem;
 }
