--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,27 +1,31 @@
 .navbar {
-    height: 10vh;
-    display: flex;
-    justify-content: space-between;
+  height: 10vh;
+  display: flex;
+  justify-content: space-between;
 }
 
 .navbar_elements {
-    width: auto;
-    height: 7vh;
+  width: auto;
+  height: 7vh;
 }
 
+.logo {
+  width: auto;
+  height: 10vh;
+}
 .product_name {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 .product_image {
-    width: 10vw;
-    height: auto;
+  width: 10vw;
+  height: auto;
 }
 
 .product_description {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
 .product_price {
-    font-size: 1rem;
+  font-size: 1rem;
 }
