--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 html,
 body {
   padding: 0;
-  margin: 0;
+  margin: 1rem;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -13,4 +13,5 @@ a {
 
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
