--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -40,6 +40,18 @@
   flex-direction: column;
 }
 
+.filter_section {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.radio {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
 .product_name {
   font-size: 2rem;
 }
